# Mrak

./: .gitignore  README.md  pyproject.toml
src/: core.py  main.py  systray.py
src/mrak/: core.py  log.py  main.py  systray.py
test/: testconfig.yaml
