[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mrak"
version = "0.1.0"
description = "A simple GUI for Rclone"
authors = ["Jan Singon Slany <singond@seznam.cz>"]

[tool.poetry.dependencies]
python = "^3.8"
tendo = "^0.2.15"
vyper-config = "^1.0.0"
PyGObject = "^3.38.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
mrak = "mrak.main:main"
